# TestBreakout

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/assets/Levels/: level01.txt  level02.txt  level03.txt
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/breakout/: Common.h
app/src/main/cpp/breakout/Core/: BasicTypes.h  Game.cpp  Game.h  UUID.cpp  UUID.h  main.cpp
app/src/main/cpp/breakout/ECS/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h
app/src/main/cpp/breakout/FileSystem/: FileSystem.cpp  FileSystem.h
app/src/main/cpp/breakout/Math/: Math.cpp  Math.h  MathTypes.h
app/src/main/cpp/breakout/Renderer/: Fonts.cpp  Fonts.h  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  TextureAsset.cpp  TextureAsset.h
app/src/main/cpp/breakout/Time/: ScopedTimer.cpp  ScopedTimer.h  Time.cpp  Time.h
app/src/main/cpp/breakout/Utils/: Utility.cpp
app/src/main/cpp/breakout/glm/: manual.md
app/src/main/cpp/breakout/glm/glm/detail/: glm.cpp
app/src/main/cpp/breakout/glm/glm/ext/: quaternion_common.inl
app/src/main/cpp/breakout/glm/glm/gtx/: dual_quaternion.inl  quaternion.inl
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
libs/freetype/include/freetype/config/: ftconfig.h
(+87 files in other folders)
